<resources>
    <string name="app_name">BlootoothTester</string>

    <string name="activity_id_set_own_addr">Own Address</string>
    <string name="activity_id_set_session_id">Session ID</string>
    <string name="activity_id_set_next">Next</string>
    <string name="activity_id_title">Enter Your Address</string>
    <string name="activity_id_hotspot_btn">Test Hotspot</string>
    <string name="activity_hotspot_et_id">Enter Own Id</string>
    <string name="activity_hotspot_et_msg">Enter Message</string>

    <string name="activity_hotspot_btn_send_msg">Send Message</string>
    <string name="activity_hotspot_btn_serve">Send File</string>
    <string name="activity_hotspot_btn_fetch">Fetch File</string>

    <string name="action_settings">Settings</string>
    <string name="Text">Status: -</string>
    <string name="send">Send Message</string>
    <string name="reset">Reset</string>
    <string name="off">Off</string>
    <string name="begin">Set Address</string>
    <string name="Receive">Receive Message</string>
    <string name="List">List paired Devices</string>
    <string name="Find">Search new Devices / Cancel</string>
    <string name="default_id">1</string>
    <string name="default_session_id">1</string>
    <string name="default_text">Hello World</string>
    <string name="to_id">To ID</string>
    <string name="message">Message</string>
</resources>
